feat: introduce DecodeConfidenceHelper and refactor BattleStateReconstructor for improved confidence handling